Uradjen slozeni oblik vezbi

--- a/SlozeniOblikVezbiProjekat/src/main/resources/application.properties
+++ b/SlozeniOblikVezbiProjekat/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+#server.port = 8081
+#server.servlet.session.timeout=5
+spring.session.timeout.seconds=300
 
+#spring.mvc.static-path-pattern=/**
+#lista vrednosti direktorijuma
+#spring.resources.static-locations=
+
+#spring.mvc.view.prefix: /WEB-INF/jsp/
+#spring.mvc.view.suffix: .jsp
+
+spring.thymeleaf.enabled=false
+vakcine.pathToFile=c:\\Users\\Kojic\\Desktop\\sr12-2020-slozenioblikvezbi\\SlozeniOblikVezbiProjekat\\src\\main\\resources\\vakcine.txt
+korisnici.pathToFile=c:\\Users\\Kojic\\Desktop\\sr12-2020-slozenioblikvezbi\\SlozeniOblikVezbiProjekat\\src\\main\\resources\\korisnici.txt
+server.servlet.contextPath=/SlozeniOblikVezbiProjekat
