Uradjene izmene i sada svaka funnkcionalnost je zavrsena

--- a/SlozeniOblikVezbiProjekat/src/main/resources/application.properties
+++ b/SlozeniOblikVezbiProjekat/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #server.port = 8081
 #server.servlet.session.timeout=5
-spring.session.timeout.seconds=300
+spring.session.timeout.seconds=5
 
 #spring.mvc.static-path-pattern=/**
 #lista vrednosti direktorijuma
@@ -10,6 +10,6 @@ spring.session.timeout.seconds=300
 #spring.mvc.view.suffix: .jsp
 
 spring.thymeleaf.enabled=false
-vakcine.pathToFile=c:\\Users\\Kojic\\Desktop\\sr12-2020-slozenioblikvezbi\\SlozeniOblikVezbiProjekat\\src\\main\\resources\\vakcine.txt
-korisnici.pathToFile=c:\\Users\\Kojic\\Desktop\\sr12-2020-slozenioblikvezbi\\SlozeniOblikVezbiProjekat\\src\\main\\resources\\korisnici.txt
+vakcine.pathToFile=c:\\Users\\Kojic\\Desktop\\SOV\\Vaccinacion\\SlozeniOblikVezbiProjekat\\src\\main\\resources\\vakcine.txt
+korisnici.pathToFile=c:\\Users\\Kojic\\Desktop\\SOV\\Vaccinacion\\SlozeniOblikVezbiProjekat\\src\\main\\resources\\korisnici.txt
 server.servlet.contextPath=/SlozeniOblikVezbiProjekat
